# easypoint

./: CONTRIBUTING.md  README.md  main.py  pyproject.toml
.github/workflows/: build.yml  test.yml
easypoint/: __init__.py  internal_types.py  matrix.py  point.py  utils.py
test/: test_point.py
